Improved hero section description

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <p>
         A passionate <span class="role">Python Developer</span> as well as 
         <span class="role">Data Analyst</span> learning and building 
-        modern web applications and analyzing data.
+        modern web applications and analyzing data to solve real-world problems.
     </p>
     <a href="#projects" class="hero-btn">View Projects</a>
 </section>
